--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Hello to the world</h1>
+        <h2>Hello user!</h2>
         <p>Thank you for visiting</p>
     </body>
 </html>
