changed header color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Hello to the world</h1>
+        <h1 style="color:red">Hello to the world</h1>
         <h2>Hello user!</h2>
         <p>Thank you for visiting</p>
     </body>
